Source/WebKit/UIProcess/Inspector/Cocoa/InspectorDelegate.mm
@@ -32,26 +32,20 @@
 
 namespace WebKit {
 
-InspectorDelegate::InspectorDelegate(_WKInspector *inspector)
+InspectorDelegate::InspectorDelegate(_WKInspector *inspector, id <_WKInspectorDelegate> delegate)
     : m_inspector(inspector)
+    , m_delegate(delegate)
 {
+    m_delegateMethods.inspectorOpenURLExternally = [delegate respondsToSelector:@selector(inspector:openURLExternally:)];
+
+    inspector->_inspector->setInspectorClient(delegate ? makeUnique<InspectorClient>(*this) : nullptr);
 }
 
-std::unique_ptr<API::InspectorClient> InspectorDelegate::createInspectorClient()
-{
-    return makeUnique<InspectorClient>(*this);
-}
+InspectorDelegate::~InspectorDelegate() = default;
 
 RetainPtr<id <_WKInspectorDelegate>> InspectorDelegate::delegate()
 {
     return m_delegate.get();
-}
-
-void InspectorDelegate::setDelegate(id <_WKInspectorDelegate> delegate)
-{
-    m_delegate = delegate;
-
-    m_delegateMethods.inspectorOpenURLExternally = [delegate respondsToSelector:@selector(inspector:openURLExternally:)];
 }
 
 InspectorDelegate::InspectorClient::InspectorClient(InspectorDelegate& delegate)
